add manual file

--- a/.gitignore
+++ b/.gitignore
@@ -15,15 +15,11 @@
 240601_STD_ssd1306_demo/
 240601_StdFreeRtosOledPrj_demo/
 240607_StdOsPrj_keyBtn/
+240612_StdOsOledBtn_定时器输出比较翻转模式_TB6600两相42步_启动频率空载频率/
+
 
 
 Flash编程/
-STM32 V3.4固件库使用方法实例修订版.doc
-Stm32寄存器与库函数概览(摘自固件库使用手册).doc
-PM0056_Programming manual.pdf
-
-
-
 
 
 
